--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "android.example.com.tflitecamerademo"
+        applicationId "cosmin.dutylabs.ro.tflitecamerademo"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
